src/objects/EnrollmentCalling__c.object
<CustomObject>
    <description>Custom enrollment dialer lists and rules to be applied to Assistant Enrollment Counselors.</description>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrioritizeLastMinutes__c</fullName>
        <description>Prioritize the last set number of minutes before returning to date last modified order.</description>
        <inlineHelpText>Prioritize the last set number of minutes before returning to date last modified order.</inlineHelpText>
        <label>Prioritize Last Minutes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrioritizeStatus__c</fullName>
        <description>Pick the statuses that the dialer will use to determine call outs.</description>
        <inlineHelpText>Pick the statuses that the dialer will use to determine call outs.</inlineHelpText>
        <label>Prioritize Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Red Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Yellow Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Blue Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Green Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Pink Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Purple Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Black Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Black Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Red Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Pink Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Blue Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Orange Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Purple Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Yellow Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Grey Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - Pink Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Grey Square</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Enrollment Calling</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Calling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>